# kyasualfi

./: Makefile  README.md  kyasualfi.opam  watch.sh
slide/: slide.saty
theme/: kyasualfi.satyh
